--- a/Lava Fall/Lava Fall/Properties/Resources.resx
+++ b/Lava Fall/Lava Fall/Properties/Resources.resx
@@ -148,6 +148,15 @@
   <data name="elicottero3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Elicottero3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pauseLava" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pauseLava.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="playAgain_trim" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\playAgain_trim.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PlayLava" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PlayLava.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="help" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\help.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -199,10 +208,13 @@
   <data name="elicottero1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Elicottero1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Tavola_disegno_312x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tavola_disegno_312x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="J" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\J.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Tavola_disegno_312x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Tavola_disegno_312x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="xLava" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\xLava.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
